force-app/main/default/objects/LLC_BI__Id_Document_Type__c/LLC_BI__Id_Document_Type__c.object-meta.xml
<CustomObject>
    <description>The different types or forms of identification documentation available.</description>
    <label>Id Document Type</label>
    <nameField>
        <label>Id Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Id Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>