force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Agency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Agency__c</fullName>
    <description>This picklist field is manually populated when configuring ID Document Types. The picklist values are the names of the state or national agency which issued the identification (driver’s license, passport) presented to the financial institution by the natural person associated with the transaction. This data is used for the financial institution’s Customer Identification Program.</description>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMV</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>