force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__ID_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ID_Document_Category__c</fullName>
    <description>Administrators populate this picklist to allow the user to choose the document category. (By default, it is BLANK)</description>
    <inlineHelpText>Select the document category.</inlineHelpText>
    <label>ID Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>ID Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>