force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Id_Document_Image_Front__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Id_Document_Image_Front__c</fullName>
    <description>Administrators populate this long text area with the URL for the image that would replace the generic placeholder image for the front of this ID Document Type. By default, the system displays a generic placeholder image.</description>
    <inlineHelpText>Enter the image URL for an image hosted online. If that does not work, upload an image to Documents, set image visibility to public, and then enter the image URL.</inlineHelpText>
    <label>ID Document Image (Front)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>