force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Is_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox to enable the ID Document for Customer Portal.</description>
    <inlineHelpText>Select the checkbox to enable the ID Document.</inlineHelpText>
    <label>Is Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>