force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Quick_Tips__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Quick_Tips__c</fullName>
    <description>Administrators populate this rich text to control the guidance that customers receive when they upload ID Documents.</description>
    <inlineHelpText>Select this functionality to guide you through the upload process for ID Documents.</inlineHelpText>
    <label>Quick Tips</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>