force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Screen_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional and can be manually configured to display a field set while collecting ID documents during New Customer Onboarding. It indicates the screen section for the document type.</description>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipName>Identification_Document_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>